[gd_scene load_steps=11 format=3 uid="uid://ct8vy087n4v6y"]

[ext_resource type="Texture2D" uid="uid://fgdtlpry732c" path="res://assets/pepe/brazoDER.png" id="1_kcx11"]
[ext_resource type="Script" path="res://personaje/pepe_nuevo.gd" id="1_toxys"]
[ext_resource type="Texture2D" uid="uid://cgisqiiqpx2w1" path="res://assets/pepe/AnteBrazoDER.png" id="2_bisvp"]
[ext_resource type="Texture2D" uid="uid://biinc6x77cimt" path="res://assets/pepe/brazoIZQ.png" id="3_ftlgj"]
[ext_resource type="Texture2D" uid="uid://cv784hcnomljs" path="res://assets/pepe/AnteBrazoIZQ.png" id="4_2p8ox"]
[ext_resource type="Texture2D" uid="uid://cmy5e6heycjt" path="res://assets/pepe/cuerpo.png" id="5_1jj3a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eqsb6"]
radius = 194.0
height = 426.0

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_rv8x6"]
target_nodepath = NodePath("../../../../IK targets/ManoDER_target")
tip_nodepath = NodePath("HuesoCuerpo/Cuello/HombroDER/CodoDER/MunecaDER")
ccdik_data_chain_length = 2
joint_data/0/bone_index = 2
joint_data/0/bone2d_node = NodePath("HuesoCuerpo/Cuello/HombroDER")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = true
joint_data/0/constraint_angle_min = 360.0
joint_data/0/constraint_angle_max = 360.0
joint_data/0/constraint_angle_invert = true
joint_data/0/constraint_in_localspace = true
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 3
joint_data/1/bone2d_node = NodePath("HuesoCuerpo/Cuello/HombroDER/CodoDER")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = true
joint_data/1/constraint_angle_min = 360.0
joint_data/1/constraint_angle_max = 360.0
joint_data/1/constraint_angle_invert = true
joint_data/1/constraint_in_localspace = true
joint_data/1/editor_draw_gizmo = true

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_ufv3x"]
target_nodepath = NodePath("../../../../IK targets/ManoIZQ_target")
tip_nodepath = NodePath("HuesoCuerpo/Cuello/HombroIZQ/CodoIZQ/MunecaIZQ")
ccdik_data_chain_length = 2
joint_data/0/bone_index = 5
joint_data/0/bone2d_node = NodePath("HuesoCuerpo/Cuello/HombroIZQ")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = true
joint_data/0/constraint_angle_min = 360.0
joint_data/0/constraint_angle_max = 360.0
joint_data/0/constraint_angle_invert = true
joint_data/0/constraint_in_localspace = true
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 6
joint_data/1/bone2d_node = NodePath("HuesoCuerpo/Cuello/HombroIZQ/CodoIZQ")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = true
joint_data/1/constraint_angle_min = -360.0
joint_data/1/constraint_angle_max = -360.0
joint_data/1/constraint_angle_invert = true
joint_data/1/constraint_in_localspace = true
joint_data/1/editor_draw_gizmo = true

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_gjxv2"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DCCDIK_rv8x6")
modifications/1 = SubResource("SkeletonModification2DCCDIK_ufv3x")

[node name="PepeNuevo" type="Node2D" groups=["Player", "player"]]
position = Vector2(2, -2)
script = ExtResource("1_toxys")

[node name="container" type="Node2D" parent="."]

[node name="cuerpo" type="CharacterBody2D" parent="container"]

[node name="BrazoDer" type="Sprite2D" parent="container/cuerpo"]
position = Vector2(58.9305, -33.192)
rotation = -0.590508
texture = ExtResource("1_kcx11")
offset = Vector2(46, 0)

[node name="AnteBrazoDer" type="Sprite2D" parent="container/cuerpo"]
position = Vector2(133.394, -78.3643)
rotation = -0.742979
scale = Vector2(0.999997, 0.999997)
texture = ExtResource("2_bisvp")
offset = Vector2(69, -7)

[node name="BrazoIzq" type="Sprite2D" parent="container/cuerpo"]
position = Vector2(-59.0695, -33.192)
rotation = 0.390478
texture = ExtResource("3_ftlgj")
offset = Vector2(-47, 0)

[node name="AnteBrazoIzq" type="Sprite2D" parent="container/cuerpo"]
position = Vector2(-144.082, -64.805)
rotation = 0.83582
texture = ExtResource("4_2p8ox")
offset = Vector2(-65, -7)

[node name="Cuerpo" type="Sprite2D" parent="container/cuerpo"]
position = Vector2(-3.06952, -28.1918)
scale = Vector2(1.35, 1.35)
texture = ExtResource("5_1jj3a")
offset = Vector2(2.2222, 60.7407)

[node name="CollisionShape2D" type="CollisionShape2D" parent="container/cuerpo"]
position = Vector2(2.93048, 32.8082)
shape = SubResource("CapsuleShape2D_eqsb6")

[node name="huesos" type="Node2D" parent="container/cuerpo"]

[node name="Skeleton2D" type="Skeleton2D" parent="container/cuerpo/huesos"]
modification_stack = SubResource("SkeletonModificationStack2D_gjxv2")

[node name="HuesoCuerpo" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D"]
position = Vector2(-1.06952, 209.808)
rest = Transform2D(1, 0, 0, 1, 598, 524)

[node name="Cuello" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo"]
position = Vector2(-2, -242)
rest = Transform2D(1, 0, 0, 1, -2, -242)

[node name="HombroDER" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello"]
position = Vector2(62, -1)
rotation = -1.63225
rest = Transform2D(1, 0, 0, 1, 62, -1)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroDER"]
remote_path = NodePath("../../../../../../BrazoDer")

[node name="CodoDER" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroDER"]
position = Vector2(87.0044, 3.93719)
rotation = -1.54357
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(1, 0, 0, 1, 85, -1)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroDER/CodoDER"]
remote_path = NodePath("../../../../../../../AnteBrazoDer")

[node name="MunecaDER" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroDER/CodoDER"]
position = Vector2(105.092, 2.36383)
rotation = 0.67421
rest = Transform2D(1, 0, 0, 1, 94, 2)

[node name="HombroIZQ" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello"]
position = Vector2(-56, -1)
rotation = 1.70964
rest = Transform2D(1, 0, 0, 1, -56, -1)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroIZQ"]
remote_path = NodePath("../../../../../../BrazoIzq")

[node name="CodoIZQ" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroIZQ"]
position = Vector2(-90.6456, 3.12489)
rotation = 1.45445
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(1, 0, 0, 1, -80, -1)
metadata/_local_pose_override_enabled_ = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroIZQ/CodoIZQ"]
remote_path = NodePath("../../../../../../../AnteBrazoIzq")

[node name="MunecaIZQ" type="Bone2D" parent="container/cuerpo/huesos/Skeleton2D/HuesoCuerpo/Cuello/HombroIZQ/CodoIZQ"]
position = Vector2(-112.592, 4.69171)
rotation = -0.578382
scale = Vector2(1, 1)
rest = Transform2D(1, 0, 0, 1, -95, 1)

[node name="IK targets" type="Node2D" parent="."]

[node name="ManoDER_target" type="Node2D" parent="IK targets"]
position = Vector2(212.93, -148.192)

[node name="ManoIZQ_target" type="Node2D" parent="IK targets"]
position = Vector2(-223.07, -145.192)
